Fix sections on mobile

--- a/themes/saleor/styles/_partial/_mobile.scss
+++ b/themes/saleor/styles/_partial/_mobile.scss
@@ -23,6 +23,15 @@
       }
     }
   }
+  .section {
+    .item {
+      border: 0;
+      &:nth-child(1) {border: 0;}
+      &:nth-child(2) {border: 0;}
+      &:nth-child(3) {border: 0;}
+      &:nth-child(4) {border: 0;}
+    }
+  }
 }
 
 
